--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-kakao-maps-sdk": "^1.1.26"
+    "react-kakao-maps-sdk": "^1.1.26",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
